--- a/package.json
+++ b/package.json
@@ -22,8 +22,20 @@
   "keywords": [
     "socket",
     "websocket",
+    "websockets",
     "chat",
+    "push",
     "serverless",
-    "realtime"
+    "server-less",
+    "realtime",
+    "real-time",
+    "tcp",
+    "event",
+    "events",
+    "broadcast",
+    "broad-cast",
+    "client",
+    "browser",
+    "server"
   ]
 }
